clusters/onprem-dev/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-public
  namespace: gateway
spec:
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: public-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: gateway
  ports:
    - name: http
      port: 80
      targetPort: 10080
    - name: https
      port: 443
      targetPort: 10443
