clusters/onprem-dev/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
spec:
  gatewayClassName: envoy-gateway
  # infrastructure:
  #   parametersRef:
  #     group: gateway.envoyproxy.io
  #     kind: EnvoyProxy
  #     name: envoy-proxy 나중에 여러 게이트웨이를 만들때 필요 
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: gateway-tls-cert
            namespace: gateway
